chore: fix cs system tests
Refs: XRDDEV-3017

--- a/development/docker/central-server/files/cs-xroad.conf
+++ b/development/docker/central-server/files/cs-xroad.conf
@@ -16,7 +16,10 @@ priority=100
 
 [program:openbao]
 command=/usr/bin/bao server -config=/etc/openbao/openbao.hcl
+user=openbao
 autorestart=true
+stopsignal=INT
+stopwaitsecs=30
 
 [program:xroad-secret-store-local]
 command=/usr/share/xroad/scripts/secret-store-init.sh
