chore: add imagePullSecrets to helm templates
Refs: XRDDEV-2996

--- a/deployment/security-server/k8s/charts/security-server/values.yaml
+++ b/deployment/security-server/k8s/charts/security-server/values.yaml
@@ -26,6 +26,8 @@ init:
     username: "opmonitor"
     schema: "public"
 
+imagePullSecrets: []
+
 serviceAccount:
   name: "ss-init-sa"
   create: true
