--- a/src/central-server/admin-service/ui-system-test/src/intTest/resources/application-override.yml
+++ b/src/central-server/admin-service/ui-system-test/src/intTest/resources/application-override.yml
@@ -22,7 +22,7 @@ test-automation:
       tags: "not @Skip"
   containers:
     testable-container:
-      reuse-between-runs: false
+      reuse-between-runs: true
       directory-mounts:
         - "/var/log/xroad/:build/cs-container-logs/" # useful for debugging. This will attach logs
   selenide:
