--- a/development/k8s/terraform/environments/test/override-values/openbao-values.yaml
+++ b/development/k8s/terraform/environments/test/override-values/openbao-values.yaml
@@ -1,3 +1,5 @@
+global:
+  tlsDisable: false
 server:
   ha:
     enabled: true
@@ -6,6 +8,8 @@ server:
       listener "tcp" {
         address = "[::]:8200"
         cluster_address = "[::]:8201"
+        tls_cert_file = "/openbao/userconfig/server-tls/tls.crt"
+        tls_key_file = "/openbao/userconfig/server-tls/tls.key"
       }
       storage "postgresql" {
         ha_enabled = "true"
@@ -17,3 +21,11 @@ server:
       secretKey: password
   extraEnvironmentVars:
     BAO_PG_CONNECTION_URL: postgres://openbao:$(BAO_PG_PASSWORD)@db-openbao.ss.svc.cluster.local:5432/openbao
+  volumes:
+    - name: userconfig-openbao-server-tls
+      secret:
+        secretName: openbao-server-tls
+  volumeMounts:
+    - mountPath: /openbao/userconfig/server-tls
+      name: userconfig-openbao-server-tls
+      readOnly: true
