--- a/src/shared-ui/package.json
+++ b/src/shared-ui/package.json
@@ -14,8 +14,8 @@
   },
   "main": "./src/index.ts",
   "dependencies": {
-    "@fontsource/open-sans": "^5.2.7",
-    "@mdi/font": "^7.4.47",
+    "@fontsource-variable/open-sans": "^5.2.7",
+    "@fontsource-variable/material-symbols-rounded": "^5.2.27",
     "@vee-validate/i18n": "~4.15.1",
     "@vee-validate/rules": "~4.15.1",
     "axios": "~1.12.2",
