chore: change image version to 8.0.0-beta1 in helm charts

--- a/deployment/security-server/k8s/charts/security-server/values.yaml
+++ b/deployment/security-server/k8s/charts/security-server/values.yaml
@@ -1,6 +1,6 @@
 init:
   serverconf:
-    image: artifactory.niis.org/xroad8-snapshot-image/ss-db-serverconf-init:8.0.0-beta1-SNAPSHOT
+    image: artifactory.niis.org/xroad8-snapshot-image/ss-db-serverconf-init:8.0.0-beta1
     imagePullPolicy: IfNotPresent
     host: "db-serverconf.ss.svc.cluster.local"
     port: "5432"
@@ -10,7 +10,7 @@ init:
     proxyUiSuperuser: "xrd"
 #    proxyUiSuperuserPassword:
   messagelog:
-    image: artifactory.niis.org/xroad8-snapshot-image/ss-db-messagelog-init:8.0.0-beta1-SNAPSHOT
+    image: artifactory.niis.org/xroad8-snapshot-image/ss-db-messagelog-init:8.0.0-beta1
     imagePullPolicy: IfNotPresent
     host: "db-messagelog.ss.svc.cluster.local"
     port: "5432"
@@ -18,7 +18,7 @@ init:
     username: "messagelog"
     schema: "public"
   opmonitor:
-    image: artifactory.niis.org/xroad8-snapshot-image/ss-db-opmonitor-init:8.0.0-beta1-SNAPSHOT
+    image: artifactory.niis.org/xroad8-snapshot-image/ss-db-opmonitor-init:8.0.0-beta1
     imagePullPolicy: IfNotPresent
     host: "db-opmonitor.ss.svc.cluster.local"
     port: "5432"
@@ -34,7 +34,7 @@ serviceAccount:
 
 services:
   configuration-client:
-    image: artifactory.niis.org/xroad8-snapshot-image/ss-configuration-client:8.0.0-beta1-SNAPSHOT
+    image: artifactory.niis.org/xroad8-snapshot-image/ss-configuration-client:8.0.0-beta1
     imagePullPolicy: IfNotPresent
     resources:
       requests:
@@ -73,7 +73,7 @@ services:
         key: "password"
 
   signer:
-    image: artifactory.niis.org/xroad8-snapshot-image/ss-signer:8.0.0-beta1-SNAPSHOT
+    image: artifactory.niis.org/xroad8-snapshot-image/ss-signer:8.0.0-beta1
     imagePullPolicy: IfNotPresent
     resources:
       requests:
@@ -106,7 +106,7 @@ services:
         secretName: "db-serverconf"
         key: "password"
   proxy:
-    image: artifactory.niis.org/xroad8-snapshot-image/ss-proxy:8.0.0-beta1-SNAPSHOT
+    image: artifactory.niis.org/xroad8-snapshot-image/ss-proxy:8.0.0-beta1
     imagePullPolicy: IfNotPresent
     resources:
       requests:
@@ -156,7 +156,7 @@ services:
         secretName: "db-messagelog"
         key: "password"
   proxy-ui-api:
-    image: artifactory.niis.org/xroad8-snapshot-image/ss-proxy-ui-api:8.0.0-beta1-SNAPSHOT
+    image: artifactory.niis.org/xroad8-snapshot-image/ss-proxy-ui-api:8.0.0-beta1
     imagePullPolicy: IfNotPresent
     resources:
       requests:
@@ -206,7 +206,7 @@ services:
         secretName: "db-serverconf"
         key: "password"
   monitor:
-    image: artifactory.niis.org/xroad8-snapshot-image/ss-monitor:8.0.0-beta1-SNAPSHOT
+    image: artifactory.niis.org/xroad8-snapshot-image/ss-monitor:8.0.0-beta1
     imagePullPolicy: IfNotPresent
     resources:
       requests:
@@ -243,7 +243,7 @@ services:
         key: "password"
   op-monitor:
     enabled: false
-    image: artifactory.niis.org/xroad8-snapshot-image/ss-op-monitor:8.0.0-beta1-SNAPSHOT
+    image: artifactory.niis.org/xroad8-snapshot-image/ss-op-monitor:8.0.0-beta1
     imagePullPolicy: IfNotPresent
     resources:
       requests:
@@ -280,7 +280,7 @@ services:
         secretName: "db-opmonitor"
         key: "password"
   backup-manager:
-    image: artifactory.niis.org/xroad8-snapshot-image/ss-backup-manager:8.0.0-beta1-SNAPSHOT
+    image: artifactory.niis.org/xroad8-snapshot-image/ss-backup-manager:8.0.0-beta1
     imagePullPolicy: IfNotPresent
     resources:
       requests:
@@ -319,7 +319,7 @@ services:
       XROAD_OPENBAO_DB_DATABASE: "openbao"
       XROAD_OPENBAO_DB_SCHEMA: "public"
       XROAD_OPENBAO_DB_USER: "openbao"
-      SERVERCONF_INIT_IMAGE: "artifactory.niis.org/xroad8-snapshot-image/ss-db-serverconf-init:8.0.0-beta1-SNAPSHOT"
+      SERVERCONF_INIT_IMAGE: "artifactory.niis.org/xroad8-snapshot-image/ss-db-serverconf-init:8.0.0-beta1"
       SERVERCONF_INITIALIZED_WITH_PROXY_UI_SUPERUSER: "false"
       PROXY_UI_SUPERUSER: "xrd"
     envFromSecrets:
