--- a/development/k8s/terraform/environments/test/override-values/security-server-values.yaml
+++ b/development/k8s/terraform/environments/test/override-values/security-server-values.yaml
@@ -1,7 +1,7 @@
 init:
   serverconf:
     dbUsername: serverconf
-    proxySuperuser: xrd
+    proxyUiSuperuser: xrd
     proxyUiSuperuserPassword: "$argon2id$v=19$m=16384,t=2,p=1$YXF3YXN6eHh6c2F3cQ$+llp8EbxlqZaF2uO/BLoFLwfqxe1Yn6BvC/DOegq6A0"
   messagelog:
     dbUsername: messagelog
