chore: Serve OpenBao over HTTPS on k8s

--- a/development/k8s/terraform/environments/test/override-values/openbao-values.yaml
+++ b/development/k8s/terraform/environments/test/override-values/openbao-values.yaml
@@ -1,10 +1,10 @@
 server:
   ha:
     enabled: true
+    replicas: 1
     config: |
       ui = true
       listener "tcp" {
-        tls_disable = 1
         address = "[::]:8200"
         cluster_address = "[::]:8201"
       }
