chore: add duplicating properties in props migration cli
Refs: XRDDEV-3031

--- a/src/tool/migration-cli/src/test/resources/local-test.ini
+++ b/src/tool/migration-cli/src/test/resources/local-test.ini
@@ -145,3 +145,8 @@ global-conf-remoting-enabled = true
 [proxy-ui-api.complementary-user-role-mappings]
 XROAD_SECURITY_OFFICER=group1,group2
 XROAD_SERVICE_ADMINISTRATOR=group3,group4
+
+[op-monitor]
+host=op-monitor-host
+port=1313
+scheme=test-scheme
