--- a/src/tool/migration-cli/src/test/resources/local-test.ini
+++ b/src/tool/migration-cli/src/test/resources/local-test.ini
@@ -97,6 +97,8 @@ backup-encryption-enabled=false
 ; if the health check of Hardware Security Modules is enabled (true) or not (all other values)
 hsm-health-check-enabled=false
 
+xroad-tls-ciphers=test1,test2,test3
+
 ; =============================================================================
 ; Configuration parameters for AntiDos
 ; These parameters specify limits at which connections will be dropped...
