--- a/src/tool/migration-cli/src/test/resources/local-test.ini
+++ b/src/tool/migration-cli/src/test/resources/local-test.ini
@@ -97,6 +97,8 @@ backup-encryption-enabled=false
 ; if the health check of Hardware Security Modules is enabled (true) or not (all other values)
 hsm-health-check-enabled=false
 
+xroad-tls-ciphers=test1,test2,test3
+
 ; =============================================================================
 ; Configuration parameters for AntiDos
 ; These parameters specify limits at which connections will be dropped...
@@ -145,3 +147,8 @@ global-conf-remoting-enabled = true
 [proxy-ui-api.complementary-user-role-mappings]
 XROAD_SECURITY_OFFICER=group1,group2
 XROAD_SERVICE_ADMINISTRATOR=group3,group4
+
+[op-monitor]
+host=op-monitor-host
+port=1313
+scheme=test-scheme
