--- a/deployment/security-server/k8s/charts/security-server/values.yaml
+++ b/deployment/security-server/k8s/charts/security-server/values.yaml
@@ -2,7 +2,7 @@ init:
   serverconf:
     image: artifactory.niis.org/xroad8-snapshot-image/ss-db-serverconf-init:8.0.0-beta1
     imagePullPolicy: IfNotPresent
-    host: "db-serverconf.ss.svc.cluster.local"
+    host: "db-serverconf"
     port: "5432"
     database: "serverconf"
     username: "serverconf"
@@ -12,7 +12,7 @@ init:
   messagelog:
     image: artifactory.niis.org/xroad8-snapshot-image/ss-db-messagelog-init:8.0.0-beta1
     imagePullPolicy: IfNotPresent
-    host: "db-messagelog.ss.svc.cluster.local"
+    host: "db-messagelog"
     port: "5432"
     database: "messagelog"
     username: "messagelog"
@@ -20,7 +20,7 @@ init:
   opmonitor:
     image: artifactory.niis.org/xroad8-snapshot-image/ss-db-opmonitor-init:8.0.0-beta1
     imagePullPolicy: IfNotPresent
-    host: "db-opmonitor.ss.svc.cluster.local"
+    host: "db-opmonitor"
     port: "5432"
     database: "op-monitor"
     username: "opmonitor"
@@ -52,14 +52,13 @@ services:
     serviceAccount:
       annotations: { }
     env:
-      XROAD_HOST: "configuration-client.ss.svc.cluster.local"
-      XROAD_SECRET_STORE_HOST: "openbao.ss.svc.cluster.local"
-      XROAD_SECRET_STORE_SCHEME: "http"
+      XROAD_HOST: "configuration-client"
+      XROAD_SECRET_STORE_HOST: "openbao"
       XROAD_CONFIGURATION_CLIENT_UPDATE_INTERVAL: "60"
-      XROAD_DB_SERVERCONF_HIBERNATE_CONNECTION_URL: "jdbc:postgresql://db-serverconf.ss.svc.cluster.local:5432/serverconf"
+      XROAD_DB_SERVERCONF_HIBERNATE_CONNECTION_URL: "jdbc:postgresql://db-serverconf:5432/serverconf"
       XROAD_DB_SERVERCONF_HIBERNATE_CONNECTION_USERNAME: "serverconf"
       DB_CONFIG_SOURCE_ENABLED: "true"
-      DB_CONFIG_SOURCE_URL: "jdbc:postgresql://db-serverconf.ss.svc.cluster.local:5432/serverconf"
+      DB_CONFIG_SOURCE_URL: "jdbc:postgresql://db-serverconf:5432/serverconf"
       DB_CONFIG_SOURCE_USERNAME: "serverconf"
     envFromSecrets:
       - name: "XROAD_SECRET_STORE_TOKEN"
@@ -91,11 +90,10 @@ services:
     serviceAccount:
       annotations: { }
     env:
-      XROAD_HOST: "signer.ss.svc.cluster.local"
-      XROAD_SECRET_STORE_HOST: "openbao.ss.svc.cluster.local"
-      XROAD_SECRET_STORE_SCHEME: "http"
-      XROAD_COMMON_RPC_CHANNEL_CONFIGURATION_CLIENT_HOST: "configuration-client.ss.svc.cluster.local"
-      XROAD_DB_SERVERCONF_HIBERNATE_CONNECTION_URL: "jdbc:postgresql://db-serverconf.ss.svc.cluster.local:5432/serverconf"
+      XROAD_HOST: "signer"
+      XROAD_SECRET_STORE_HOST: "openbao"
+      XROAD_COMMON_RPC_CHANNEL_CONFIGURATION_CLIENT_HOST: "configuration-client"
+      XROAD_DB_SERVERCONF_HIBERNATE_CONNECTION_URL: "jdbc:postgresql://db-serverconf:5432/serverconf"
       XROAD_DB_SERVERCONF_HIBERNATE_CONNECTION_USERNAME: "serverconf"
       XROAD_DB_SERVERCONF_HIBERNATE_CONNECTION_DRIVER_CLASS: "org.postgresql.Driver"
     envFromSecrets:
@@ -132,17 +130,16 @@ services:
     serviceAccount:
       annotations: { }
     env:
-      XROAD_HOST: "proxy.ss.svc.cluster.local"
-      XROAD_SECRET_STORE_HOST: "openbao.ss.svc.cluster.local"
-      XROAD_SECRET_STORE_SCHEME: "http"
-      XROAD_COMMON_RPC_CHANNEL_CONFIGURATION_CLIENT_HOST: "configuration-client.ss.svc.cluster.local"
-      XROAD_COMMON_RPC_CHANNEL_SIGNER_HOST: "signer.ss.svc.cluster.local"
-      XROAD_OP_MONITOR_HOST: "op-monitor.ss.svc.cluster.local"
+      XROAD_HOST: "proxy"
+      XROAD_SECRET_STORE_HOST: "openbao"
+      XROAD_COMMON_RPC_CHANNEL_CONFIGURATION_CLIENT_HOST: "configuration-client"
+      XROAD_COMMON_RPC_CHANNEL_SIGNER_HOST: "signer"
+      XROAD_OP_MONITOR_HOST: "op-monitor"
       XROAD_OP_MONITOR_SCHEME: https
-      XROAD_DB_SERVERCONF_HIBERNATE_CONNECTION_URL: "jdbc:postgresql://db-serverconf.ss.svc.cluster.local:5432/serverconf"
+      XROAD_DB_SERVERCONF_HIBERNATE_CONNECTION_URL: "jdbc:postgresql://db-serverconf:5432/serverconf"
       XROAD_DB_SERVERCONF_HIBERNATE_CONNECTION_USERNAME: "serverconf"
       XROAD_DB_SERVERCONF_HIBERNATE_CONNECTION_DRIVER_CLASS: "org.postgresql.Driver"
-      XROAD_DB_MESSAGELOG_HIBERNATE_CONNECTION_URL: "jdbc:postgresql://db-messagelog.ss.svc.cluster.local:5432/messagelog"
+      XROAD_DB_MESSAGELOG_HIBERNATE_CONNECTION_URL: "jdbc:postgresql://db-messagelog:5432/messagelog"
       XROAD_DB_MESSAGELOG_HIBERNATE_CONNECTION_USERNAME: "messagelog"
       XROAD_DB_MESSAGELOG_HIBERNATE_CONNECTION_DRIVER_CLASS: "org.postgresql.Driver"
     envFromSecrets:
@@ -174,23 +171,22 @@ services:
       annotations: { }
     env:
       DEBUG_PORT: "9999"
-      XROAD_HOST: "proxy-ui-api.ss.svc.cluster.local"
-      XROAD_SECRET_STORE_HOST: "openbao.ss.svc.cluster.local"
-      XROAD_SECRET_STORE_SCHEME: "http"
-      XROAD_COMMON_RPC_CHANNEL_CONFIGURATION_CLIENT_HOST: "configuration-client.ss.svc.cluster.local"
-      XROAD_COMMON_RPC_CHANNEL_SIGNER_HOST: "signer.ss.svc.cluster.local"
-      XROAD_COMMON_RPC_CHANNEL_PROXY_HOST: "proxy.ss.svc.cluster.local"
-      XROAD_COMMON_RPC_CHANNEL_BACKUP_MANAGER_HOST: "backup-manager.ss.svc.cluster.local"
-      XROAD_COMMON_RPC_CHANNEL_ENV_MONITOR_HOST: "monitor.ss.svc.cluster.local"
-      XROAD_DB_SERVERCONF_HIBERNATE_CONNECTION_URL: "jdbc:postgresql://db-serverconf.ss.svc.cluster.local:5432/serverconf"
+      XROAD_HOST: "proxy-ui-api"
+      XROAD_SECRET_STORE_HOST: "openbao"
+      XROAD_COMMON_RPC_CHANNEL_CONFIGURATION_CLIENT_HOST: "configuration-client"
+      XROAD_COMMON_RPC_CHANNEL_SIGNER_HOST: "signer"
+      XROAD_COMMON_RPC_CHANNEL_PROXY_HOST: "proxy"
+      XROAD_COMMON_RPC_CHANNEL_BACKUP_MANAGER_HOST: "backup-manager"
+      XROAD_COMMON_RPC_CHANNEL_ENV_MONITOR_HOST: "monitor"
+      XROAD_DB_SERVERCONF_HIBERNATE_CONNECTION_URL: "jdbc:postgresql://db-serverconf:5432/serverconf"
       XROAD_DB_SERVERCONF_HIBERNATE_CONNECTION_USERNAME: "serverconf"
       XROAD_DB_SERVERCONF_HIBERNATE_CONNECTION_DRIVER_CLASS: "org.postgresql.Driver"
-      XROAD_DB_MESSAGELOG_HIBERNATE_CONNECTION_URL: "jdbc:postgresql://db-messagelog.ss.svc.cluster.local:5432/messagelog"
+      XROAD_DB_MESSAGELOG_HIBERNATE_CONNECTION_URL: "jdbc:postgresql://db-messagelog:5432/messagelog"
       XROAD_DB_MESSAGELOG_HIBERNATE_CONNECTION_USERNAME: "messagelog"
       XROAD_DB_MESSAGELOG_HIBERNATE_CONNECTION_DRIVER_CLASS: "org.postgresql.Driver"
-      XROAD_PROXY_UI_API_MANAGEMENT_PROXY_SERVER_URL: "https://proxy.ss.svc.cluster.local:8443"
+      XROAD_PROXY_UI_API_MANAGEMENT_PROXY_SERVER_URL: "https://proxy:8443"
       DB_CONFIG_SOURCE_ENABLED: "true"
-      DB_CONFIG_SOURCE_URL: "jdbc:postgresql://db-serverconf.ss.svc.cluster.local:5432/serverconf"
+      DB_CONFIG_SOURCE_URL: "jdbc:postgresql://db-serverconf:5432/serverconf"
       DB_CONFIG_SOURCE_USERNAME: "serverconf"
     envFromSecrets:
       - name: "XROAD_SECRET_STORE_TOKEN"
@@ -224,14 +220,13 @@ services:
       annotations: { }
     env:
       DEBUG_PORT: "9999"
-      XROAD_HOST: "monitor.ss.svc.cluster.local"
-      XROAD_SECRET_STORE_HOST: "openbao.ss.svc.cluster.local"
-      XROAD_SECRET_STORE_SCHEME: "http"
-      XROAD_COMMON_RPC_CHANNEL_CONFIGURATION_CLIENT_HOST: "configuration-client.ss.svc.cluster.local"
-      XROAD_COMMON_RPC_CHANNEL_SIGNER_HOST: "signer.ss.svc.cluster.local"
-      XROAD_COMMON_RPC_CHANNEL_PROXY_HOST: "proxy.ss.svc.cluster.local"
-      XROAD_COMMON_RPC_CHANNEL_ENV_MONITOR_HOST: "monitor.ss.svc.cluster.local"
-      XROAD_DB_SERVERCONF_HIBERNATE_CONNECTION_URL: "jdbc:postgresql://db-serverconf.ss.svc.cluster.local:5432/serverconf"
+      XROAD_HOST: "monitor"
+      XROAD_SECRET_STORE_HOST: "openbao"
+      XROAD_COMMON_RPC_CHANNEL_CONFIGURATION_CLIENT_HOST: "configuration-client"
+      XROAD_COMMON_RPC_CHANNEL_SIGNER_HOST: "signer"
+      XROAD_COMMON_RPC_CHANNEL_PROXY_HOST: "proxy"
+      XROAD_COMMON_RPC_CHANNEL_ENV_MONITOR_HOST: "monitor"
+      XROAD_DB_SERVERCONF_HIBERNATE_CONNECTION_URL: "jdbc:postgresql://db-serverconf:5432/serverconf"
       XROAD_DB_SERVERCONF_HIBERNATE_CONNECTION_USERNAME: "serverconf"
       XROAD_DB_SERVERCONF_HIBERNATE_CONNECTION_DRIVER_CLASS: "org.postgresql.Driver"
     envFromSecrets:
@@ -263,13 +258,12 @@ services:
       annotations: { }
     env:
       DEBUG_PORT: "9999"
-      XROAD_HOST: "opmonitor.ss.svc.cluster.local"
+      XROAD_HOST: "opmonitor"
       XROAD_OP_MONITOR_LISTEN_ADDRESS: 0.0.0.0
       XROAD_OP_MONITOR_SCHEME: https
-      XROAD_SECRET_STORE_HOST: "openbao.ss.svc.cluster.local"
-      XROAD_SECRET_STORE_SCHEME: "http"
-      XROAD_COMMON_RPC_CHANNEL_CONFIGURATION_CLIENT_HOST: "configuration-client.ss.svc.cluster.local"
-      XROAD_DB_OP_MONITOR_HIBERNATE_CONNECTION_URL: "jdbc:postgresql://db-opmonitor.ss.svc.cluster.local:5432/op-monitor"
+      XROAD_SECRET_STORE_HOST: "openbao"
+      XROAD_COMMON_RPC_CHANNEL_CONFIGURATION_CLIENT_HOST: "configuration-client"
+      XROAD_DB_OP_MONITOR_HIBERNATE_CONNECTION_URL: "jdbc:postgresql://db-opmonitor:5432/op-monitor"
       XROAD_DB_OP_MONITOR_HIBERNATE_CONNECTION_USERNAME: "opmonitor"
       XROAD_DB_OP_MONITOR_HIBERNATE_CONNECTION_DRIVER_CLASS: "org.postgresql.Driver"
     envFromSecrets:
@@ -306,15 +300,14 @@ services:
     serviceAccount:
       annotations: { }
     env:
-      XROAD_HOST: "backup-manager.ss.svc.cluster.local"
-      XROAD_SECRET_STORE_HOST: "openbao.ss.svc.cluster.local"
-      XROAD_SECRET_STORE_SCHEME: "http"
-      XROAD_SERVERCONF_DB_HOST: "db-serverconf.ss.svc.cluster.local"
+      XROAD_HOST: "backup-manager"
+      XROAD_SECRET_STORE_HOST: "openbao"
+      XROAD_SERVERCONF_DB_HOST: "db-serverconf"
       XROAD_SERVERCONF_DB_PORT: "5432"
       XROAD_SERVERCONF_DB_NAME: "serverconf"
       XROAD_SERVERCONF_DB_SCHEMA: "public"
       XROAD_SERVERCONF_DB_USERNAME: "serverconf"
-      XROAD_OPENBAO_DB_HOST: "db-openbao.ss.svc.cluster.local"
+      XROAD_OPENBAO_DB_HOST: "db-openbao"
       XROAD_OPENBAO_DB_PORT: "5432"
       XROAD_OPENBAO_DB_DATABASE: "openbao"
       XROAD_OPENBAO_DB_SCHEMA: "public"
