--- a/development/k8s/terraform/environments/dev/override-values/security-server-values.yaml
+++ b/development/k8s/terraform/environments/dev/override-values/security-server-values.yaml
@@ -16,22 +16,111 @@ services:
     image: localhost:5555/ss-configuration-client:latest
     env:
       XROAD_CONFIGURATION_CLIENT_UPDATE_INTERVAL: "10"
+      QUARKUS_VAULT_TLS_CA_CERT: "/etc/xroad/ssl/openbao.crt"
+    extraVolumes:
+      - name: configuration-client-openbao-tls-certificate
+        secret:
+          secretName: openbao-server-tls
+          items:
+            - key: tls.crt  # just the TLS certificate of OpenBao is needed in order to trust it
+              path: openbao.crt
+    extraVolumeMounts:
+      - mountPath: /etc/xroad/ssl/openbao.crt  # Mount as file
+        subPath: openbao.crt
+        name: configuration-client-openbao-tls-certificate
   signer:
     image: localhost:5555/ss-signer:latest
+    env:
+      QUARKUS_VAULT_TLS_CA_CERT: "/etc/xroad/ssl/openbao.crt"
+    extraVolumes:
+      - name: signer-openbao-tls-certificate
+        secret:
+          secretName: openbao-server-tls
+          items:
+            - key: tls.crt  # just the TLS certificate of OpenBao is needed in order to trust it
+              path: openbao.crt
+    extraVolumeMounts:
+      - mountPath: /etc/xroad/ssl/openbao.crt  # Mount as file
+        subPath: openbao.crt
+        name: signer-openbao-tls-certificate
   proxy:
     image: localhost:5555/ss-proxy:latest
     env:
       XROAD_PROXY_ADDON_OP_MONITOR_ENABLED: "true"
+      QUARKUS_VAULT_TLS_CA_CERT: "/etc/xroad/ssl/openbao.crt"
+    extraVolumes:
+      - name: proxy-openbao-tls-certificate
+        secret:
+          secretName: openbao-server-tls
+          items:
+            - key: tls.crt  # just the TLS certificate of OpenBao is needed in order to trust it
+              path: openbao.crt
+    extraVolumeMounts:
+      - mountPath: /etc/xroad/ssl/openbao.crt  # Mount as file
+        subPath: openbao.crt
+        name: proxy-openbao-tls-certificate
   proxy-ui-api:
     image: localhost:5555/ss-proxy-ui-api:latest
+    env:
+      SPRING_CLOUD_VAULT_SSL_TRUST_STORE: "file:/etc/xroad/ssl/openbao.crt"
+      SPRING_CLOUD_VAULT_SSL_TRUST_STORE_TYPE: "PEM"
+    extraVolumes:
+      - name: proxy-ui-openbao-tls-certificate
+        secret:
+          secretName: openbao-server-tls
+          items:
+            - key: tls.crt  # just the TLS certificate of OpenBao is needed in order to trust it
+              path: openbao.crt
+    extraVolumeMounts:
+      - mountPath: /etc/xroad/ssl/openbao.crt  # Mount as file
+        subPath: openbao.crt
+        name: proxy-ui-openbao-tls-certificate
   monitor:
     image: localhost:5555/ss-monitor:latest
+    env:
+      QUARKUS_VAULT_TLS_CA_CERT: "/etc/xroad/ssl/openbao.crt"
+    extraVolumes:
+      - name: monitor-openbao-tls-certificate
+        secret:
+          secretName: openbao-server-tls
+          items:
+            - key: tls.crt  # just the TLS certificate of OpenBao is needed in order to trust it
+              path: openbao.crt
+    extraVolumeMounts:
+      - mountPath: /etc/xroad/ssl/openbao.crt  # Mount as file
+        subPath: openbao.crt
+        name: monitor-openbao-tls-certificate
   op-monitor:
     image: localhost:5555/ss-op-monitor:latest
     enabled: true
+    env:
+      QUARKUS_VAULT_TLS_CA_CERT: "/etc/xroad/ssl/openbao.crt"
+    extraVolumes:
+      - name: op-monitor-openbao-tls-certificate
+        secret:
+          secretName: openbao-server-tls
+          items:
+            - key: tls.crt  # just the TLS certificate of OpenBao is needed in order to trust it
+              path: openbao.crt
+    extraVolumeMounts:
+      - mountPath: /etc/xroad/ssl/openbao.crt  # Mount as file
+        subPath: openbao.crt
+        name: op-monitor-openbao-tls-certificate
   backup-manager:
     image: localhost:5555/ss-backup-manager:latest
     env:
       SERVERCONF_INIT_IMAGE: localhost:5555/ss-db-serverconf-init:latest
       SERVERCONF_INITIALIZED_WITH_PROXY_UI_SUPERUSER: "true"
       PROXY_UI_SUPERUSER: xrd
+      QUARKUS_VAULT_TLS_CA_CERT: "/etc/xroad/ssl/openbao.crt"
+    extraVolumes:
+      - name: backup-manager-openbao-tls-certificate
+        secret:
+          secretName: openbao-server-tls
+          items:
+            - key: tls.crt  # just the TLS certificate of OpenBao is needed in order to trust it
+              path: openbao.crt
+    extraVolumeMounts:
+      - mountPath: /etc/xroad/ssl/openbao.crt  # Mount as file
+        subPath: openbao.crt
+        name: backup-manager-openbao-tls-certificate
