--- a/src/service/op-monitor/op-monitor-application/src/main/resources/application.yaml
+++ b/src/service/op-monitor/op-monitor-application/src/main/resources/application.yaml
@@ -16,6 +16,10 @@ xroad:
         common-name: ${XROAD_HOST:localhost}
         ip-subject-alt-names:
           - 127.0.0.1
+  db:
+    op-monitor:
+      hibernate:
+        hikari.dataSource.ApplicationName: ${quarkus.application.name}
 
 "%native":
   quarkus:
