feat: As a Central Server Administrator I want to be able to define my TSA and OCSP as free or paid so that users can make a choice based on the information
CR, Sonar and i18n changes

refs: XRDDEV-2979

--- a/src/central-server/admin-service/ui-system-test/src/intTest/resources/application-override.yml
+++ b/src/central-server/admin-service/ui-system-test/src/intTest/resources/application-override.yml
@@ -22,7 +22,7 @@ test-automation:
       tags: "not @Skip"
   containers:
     testable-container:
-      reuse-between-runs: true
+      reuse-between-runs: false
       directory-mounts:
         - "/var/log/xroad/:build/cs-container-logs/" # useful for debugging. This will attach logs
   selenide:
