chore: application name for messagelog db
Refs: XRDDEV-2972

--- a/src/security-server/admin-service/application/src/main/resources/application.yml
+++ b/src/security-server/admin-service/application/src/main/resources/application.yml
@@ -65,6 +65,9 @@ xroad:
         hikari.maximumPoolSize: 5
         hikari.minimumIdle: 1
         hikari.dataSource.ApplicationName: ${spring.application.name}-serverconf
+    messagelog:
+      hibernate:
+        hikari.dataSource.ApplicationName: ${spring.application.name}
   common-global-conf:
     refresh-rate: -1 # UI has its own refresh job.
   proxy-ui-api:
