chore: fix e2e isopenapi healthcheck (curl not available anymore in the image)
Refs: XRDDEV-3035

--- a/src/security-server/e2e-test/src/intTest/resources/compose.aux.yaml
+++ b/src/security-server/e2e-test/src/intTest/resources/compose.aux.yaml
@@ -60,7 +60,7 @@ services:
     healthcheck:
       interval: 5s
       retries: 40
-      test: [ "CMD", "curl", "-f", "-k", "http://localhost:8080/v3/api-docs" ]
+      test: [ "CMD", "wget", "--spider", "-q", "http://localhost:8080/v3/api-docs" ]
     networks:
       - xroad-network
   issoap:
