--- a/Docker/xrd-dev-stack/compose.yaml
+++ b/Docker/xrd-dev-stack/compose.yaml
@@ -78,7 +78,7 @@ services:
     healthcheck:
       interval: 5s
       retries: 40
-      test: [ "CMD", "curl", "-f", "-k", "http://localhost:8080/v3/api-docs" ]
+      test: [ "CMD", "wget", "--spider", "-q", "http://localhost:8080/v3/api-docs" ]
   issoap:
     image: ${IS_SOAP_IMG}
     deploy:
