--- a/src/gradle.properties
+++ b/src/gradle.properties
@@ -1,7 +1,7 @@
 org.gradle.jvmargs=-Xmx1536m
 
-xroadVersion=8.0.0-beta1
-xroadBuildType=RELEASE
+xroadVersion=8.0.0-beta2
+xroadBuildType=SNAPSHOT
 xroadPublishUrl=
 xroadPublishUser=
 xroadPublishApiKey=
