--- a/deployment/security-server/k8s/charts/external-service-bridge/values.yaml
+++ b/deployment/security-server/k8s/charts/external-service-bridge/values.yaml
@@ -2,6 +2,9 @@ service:
   name: xrd-cs
   namespace: default
 
+image: "bitnamilegacy/kubectl:latest"
+imagePullPolicy: IfNotPresent
+
 externalHost: "host.docker.internal"
 
 ports:
